--- a/_includes/actions-assessment.html
+++ b/_includes/actions-assessment.html
@@ -1,4 +1,4 @@
-<div class="row mb-6 sticky-top bg-white py-5">
+<div class="row mb-6 sticky-top bg-body py-5">
   <div class="d-flex justify-content-lg-end mt-2 mt-lg-0">
     <a class="btn btn-neutral-50" href="#"><i class="fal fa-arrow-circle-right me-2"></i>Progress to decision</a>
   </div>
