--- a/_includes/review-progress.html
+++ b/_includes/review-progress.html
@@ -1,4 +1,4 @@
-<nav class="progress-nav mb-5">
+<nav class="progress-nav pb-2 mb-5 d-none d-md-block">
   <ul class="nav d-flex justify-content-between text-center">
     <li class="nav-item mx-auto">
       <a class="nav-link" href="#"><i class="fal fa-calendar-day text-success-500"></i></a>
@@ -6,28 +6,28 @@
     </li>
     <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
     <li class="nav-item mx-auto">
-      <a class="nav-link" href="#"><i class="fal fa-comments-alt text-success-500"></i></a>
-      2. Views
+      <a class="nav-link" href="#"><i class="fal fa-comments-alt text-secondary-500"></i></a>
+      <strong>2. Views</strong>
     </li>
     <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
-    <li class="nav-item mx-auto">
-      <a class="nav-link" href="#"><i class="fal fa-users-class text-success-500"></i></a>
+    <li class="nav-item mx-auto text-neutral-400">
+      <a class="nav-link" href="#"><i class="fal fa-users-class text-neutral-400"></i></a>
       3. Meeting
     </li>
     <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
-    <li class="nav-item mx-auto">
-      <a class="nav-link" href="#"><i class="fal fa-file-user text-success-500"></i></a>
+    <li class="nav-item mx-auto text-neutral-400">
+      <a class="nav-link" href="#"><i class="fal fa-file-user text-neutral-400"></i></a>
       4. Report
     </li>
     <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
-    <li class="nav-item mx-auto">
-      <a class="nav-link" href="#"><i class="fal fa-bookmark text-success-500"></i></a>
+    <li class="nav-item mx-auto text-neutral-400">
+      <a class="nav-link" href="#"><i class="fal fa-bookmark text-neutral-400"></i></a>
       5. Decision
     </li>
     <li class="d-flex align-items-center"><i class="fal fa-angle-right"></i></li>
-    <li class="nav-item mx-auto">
-      <a class="nav-link" aria-current="page" href="#"><i class="fal fa-file-contract text-secondary-500"></i></a>
-      6. Plan
+    <li class="nav-item mx-auto text-neutral-400">
+      <a class="nav-link" aria-current="page" href="#"><i class="fal fa-file-contract text-neutral-400"></i></a>
+      6. EHC Plan
     </li>
   </ul>
 </nav>
