--- a/_includes/sidenav-case.html
+++ b/_includes/sidenav-case.html
@@ -127,7 +127,7 @@
               <div id="accordion-case-sidebar-collapseFour" class="accordion-collapse collapse" aria-labelledby="accordion-case-sidebar-headingFour">
                 <div class="accordion-body idx-sidebar-accordion-text d-flex flex-column px-2">
                   <a href="#"><i class="fal fa-pencil-alt fa-fw me-1 mb-2"></i>Add note</a>
-                  <a href="#"><i class="fal fa-history fa-fw me-1 mb-2"></i>Timeline</a>
+                  <a href="/case-view/timeline"><i class="fal fa-history fa-fw me-1 mb-2"></i>Timeline</a>
                   <a href="#"><i class="fal fa-ban fa-fw me-1 mb-2"></i>Close case </a>
                 </div>
               </div>
