Updated read more link style

--- a/css/cobalt-add.css
+++ b/css/cobalt-add.css
@@ -375,6 +375,10 @@ ul.timeline {
   color: var(--neutral-500);
 }
 
+.idox-more-link > i {
+  color: var(--secondary);
+}
+
 /*
 
 .timeline:before {
