--- a/css/cobalt-add.css
+++ b/css/cobalt-add.css
@@ -379,90 +379,18 @@ ul.timeline {
   color: var(--secondary);
 }
 
-/*
-
-.timeline:before {
-  top: 250px;
-  bottom: 90px;
-  position: absolute;
-  content: " ";
-  width: 3px;
-  background-color: #eeeeee;
-  left: 25%;
-  margin-left: -1.5px;
+.idox-status-dropdown > .btn-outline-light {
+  border-color: var(--neutral-300);
 }
 
-.timeline > li {
-  margin-bottom: 20px;
-  position: relative;
+.idox-status-dropdown > .btn-outline-light:hover {
+  background-color: transparent;
 }
 
-.timeline > li:before,
-.timeline > li:after {
-  content: " ";
-  display: table;
+.idox-status-dropdown > .dropdown-menu {
+  max-height: 100vh;
+  overflow-y: scroll;
 }
-
-.timeline > li:after {
-  clear: both;
-}
-
-.timeline > li:before,
-.timeline > li:after {
-  content: " ";
-  display: table;
-}
-
-.timeline > li:after {
-  clear: both;
-}
-
-.timeline > li > .timeline-panel {
-  width: 46%;
-  float: left;
-  border: 1px solid #d4d4d4;
-  border-radius: 2px;
-  padding: 20px;
-  position: relative;
-  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-}
-
-.timeline > li > .timeline-badge {
-  width: 15px;
-  height: 15px;
-  line-height: 15px;
-  font-size: 1.4em;
-  text-align: center;
-  position: absolute;
-  top: 33%;
-  left: 50%;
-  margin-left: -25px;
-  background-color: #999999;
-  z-index: 100;
-  border-top-right-radius: 50%;
-  border-top-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-  border-bottom-left-radius: 50%;
-}
-
-.timeline > li.timeline-inverted > .timeline-panel {
-  float: right;
-}
-
-.timeline > li.timeline-inverted > .timeline-panel:before {
-  border-left-width: 0;
-  border-right-width: 15px;
-  left: -15px;
-  right: auto;
-}
-
-.timeline > li.timeline-inverted > .timeline-panel:after {
-  border-left-width: 0;
-  border-right-width: 14px;
-  left: -14px;
-  right: auto;
-}*/
 
 /* = Colour swatches
 -------------------------------------------------------------------------- */
