Updated dropdown header

--- a/_includes/filter-cases.html
+++ b/_includes/filter-cases.html
@@ -27,7 +27,7 @@
           <li><a class="dropdown-item" href="#">Amendment consultation</a></li>
           <li><a class="dropdown-item" href="#">Pending cease</a></li>
           <li><hr class="dropdown-divider"></li>
-          <li><h6 class="dropdown-header">Without pathway</h6></li>
+          <li><h6 class="dropdown-header">Outside a pathway</h6></li>
           <li><a class="dropdown-item" href="#">Drafting amendment</a></li>
           <li><a class="dropdown-item" href="#">Amendment consultation</a></li>
           <li><a class="dropdown-item" href="#">EHCP ceased</a></li>
