--- a/_includes/search-users.html
+++ b/_includes/search-users.html
@@ -7,7 +7,7 @@
   </div>
   <div class="col-md-4 mt-2 mt-lg-0">
     <a class="btn btn-neutral-50" href="#" data-bs-toggle="collapse" data-bs-target="#search-filters"><i class="fal fa-filter me-2"></i>Filters</a>
-    <a class="btn btn-neutral-50" href="#"><i class="fal fa-user-plus fa-sm me-2"></i>Add user</a>
+    <a class="btn btn-neutral-50" href="/admin/create-user"><i class="fal fa-user-plus fa-sm me-2"></i>Add user</a>
   </div>
   <div class="collapse p-3" id="search-filters">
     {% include filter-users.html %}
