Changed reference to case id

--- a/_includes/search-cases.html
+++ b/_includes/search-cases.html
@@ -1,7 +1,7 @@
 <form class="row mt-7 mb-7">
   <div class="col-md-8">
     <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search by name or reference" aria-label="search" aria-describedby="button-addon2">
+      <input type="text" class="form-control" placeholder="Search by name or case ID" aria-label="search" aria-describedby="button-addon2">
       <button class="btn btn-primary" type="button" id="button-addon2"><i class="fal fa-search me-2 text-white" aria-hidden="true" title="Search"></i>Search</button>
     </div>
   </div>
