Updated user admin page

--- a/_includes/filter-users.html
+++ b/_includes/filter-users.html
@@ -3,7 +3,7 @@
     <h6 class="card-heading mt-0 mb-2">Roles</h6>
     <div class="col-6 col-sm-4 col-md-3 col-lg-2">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckCoordinator" checked>
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckCoordinator">
         <label class="form-check-label" for="flexCheckCoordinator">
           Co-ordinator
         </label>
@@ -11,7 +11,7 @@
     </div>
     <div class="col-6 col-sm-4 col-md-3 col-lg-2">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckContributor" checked>
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckContributor">
         <label class="form-check-label" for="flexCheckContributor">
           Contributor
         </label>
@@ -19,7 +19,7 @@
     </div>
     <div class="col-6 col-sm-4 col-md-3 col-lg-2">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckParent" checked>
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckParent">
         <label class="form-check-label" for="flexCheckParent">
           Parent
         </label>
@@ -27,7 +27,7 @@
     </div>
     <div class="col-6 col-sm-4 col-md-3 col-lg-2">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckSettingAdmin" checked>
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckSettingAdmin">
         <label class="form-check-label" for="flexCheckSettingAdmin">
           Setting admin
         </label>
@@ -35,7 +35,7 @@
     </div>
     <div class="col-6 col-sm-4 col-md-3 col-lg-2">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckSettingUser" checked>
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckSettingUser">
         <label class="form-check-label" for="flexCheckSettingUser">
           Setting user
         </label>
@@ -47,7 +47,7 @@
     <h6 class="card-heading mt-2 mb-2">Status</h6>
     <div class="col-6 col-sm-4 col-md-3 col-lg-2">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckActive" checked>
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckActive">
         <label class="form-check-label" for="flexCheckActive">
           Active
         </label>
@@ -55,7 +55,7 @@
     </div>
     <div class="col-6 col-sm-4 col-md-3 col-lg-2">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckInvited" checked>
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckInvited">
         <label class="form-check-label" for="flexCheckInvited">
           Invited
         </label>
@@ -63,7 +63,7 @@
     </div>
     <div class="col-6 col-sm-4 col-md-3 col-lg-2">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckSuspended" checked>
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckSuspended">
         <label class="form-check-label" for="flexCheckSuspended">
           Suspended
         </label>
@@ -71,5 +71,7 @@
     </div>
 
   </div>
+
+  <a href="#" role="button" class="btn btn-neutral-50 mt-5"><i class="fal fa-sync me-2"></i>Update results</a>
 
 </div>
