--- a/css/cobalt-main.css
+++ b/css/cobalt-main.css
@@ -7823,6 +7823,7 @@ textarea.form-control-lg {
   overflow-anchor: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
   font-size: 1rem;
+  font-weight: 500;
 }
 @media (prefers-reduced-motion: reduce) {
   .accordion-button {
