--- a/_includes/sidenav-case-report.html
+++ b/_includes/sidenav-case-report.html
@@ -38,7 +38,7 @@
             </div>
             <div class="d-flex justify-content-between">
               <p class="idx-sidebar-accordion-text text-neutral-500 mb-1" title="Case status">Status</p>
-              <p class="idx-sidebar-accordion-text mb-1">Review arranged</p>
+              <p class="idx-sidebar-accordion-text mb-1">Draft review report</p>
             </div>
           </div>
 
