--- a/_includes/header-anon.html
+++ b/_includes/header-anon.html
@@ -2,8 +2,8 @@
   <nav class="py-2 navbar top bg-primary main-header">
     <div class="container-fluid">
 
-      <a href="/" class="navbar-brand text-white ms-4 pt-2 "><span class="d-none d-md-inline-block">Idox EHC Hub<span class="px-3">|</span></span><span class="la-name">Edgehill Council</span></a>
-      
+      <a href="/" class="navbar-brand text-white ms-4 pt-2 "><span class="d-none d-md-inline-block">Idox EHC Hub<span class="px-3">|</span></span><span class="la-name">Edgehill Council (Prototype)</span></a>
+
     </div>
   </nav>
 </header>
