--- a/_includes/sidenav-case-alt.html
+++ b/_includes/sidenav-case-alt.html
@@ -50,7 +50,7 @@
           <div class="accordion mt-2" id="accordion-case-sidebar">
             <div class="accordion-item border-0 bg-white">
               <h2 class="accordion-header" id="accordion-case-sidebar-headingOne">
-                <button class="accordion-button bg-white idx-sidebar-accordion-text fw-500 py-2 px-2" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-case-sidebar-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                <button class="accordion-button bg-secondary-100 idx-sidebar-accordion-text fw-500 py-2 px-2" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-case-sidebar-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
                   Family
                 </button>
               </h2>
@@ -68,7 +68,7 @@
             </div>
             <div class="accordion-item border-0 bg-white">
               <h2 class="accordion-header" id="accordion-case-sidebar-headingTwo">
-                <button class="accordion-button bg-white idx-sidebar-accordion-text fw-500 py-2 px-2" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-case-sidebar-collapseTwo" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo">
+                <button class="accordion-button bg-secondary-100 idx-sidebar-accordion-text fw-500 py-2 px-2" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-case-sidebar-collapseTwo" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo">
                   Case co-ordinator
                 </button>
               </h2>
@@ -84,7 +84,7 @@
             </div>
             <div class="accordion-item border-0 bg-white">
               <h2 class="accordion-header" id="accordion-case-sidebar-headingThree">
-                <button class="accordion-button bg-white idx-sidebar-accordion-text fw-500 py-2 px-2" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-case-sidebar-collapseThree" aria-expanded="true" aria-controls="panelsStayOpen-collapseThree">
+                <button class="accordion-button bg-secondary-100 idx-sidebar-accordion-text fw-500 py-2 px-2" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-case-sidebar-collapseThree" aria-expanded="true" aria-controls="panelsStayOpen-collapseThree">
                   Education setting
                 </button>
               </h2>
@@ -120,7 +120,7 @@
             </div>
             <div class="accordion-item border-0 bg-white">
               <h2 class="accordion-header" id="accordion-case-sidebar-headingFour">
-                <button class="accordion-button bg-white idx-sidebar-accordion-text fw-500 collapsed py-2 px-2" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-case-sidebar-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
+                <button class="accordion-button bg-secondary-100 idx-sidebar-accordion-text fw-500 collapsed py-2 px-2" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-case-sidebar-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
                   Notes
                 </button>
               </h2>
@@ -134,7 +134,7 @@
             </div>
             <div class="accordion-item border-0 bg-white">
               <h2 class="accordion-header" id="accordion-case-sidebar-headingFive">
-                <button class="accordion-button bg-white idx-sidebar-accordion-text fw-500 py-2 px-2 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-case-sidebar-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
+                <button class="accordion-button bg-secondary-100 idx-sidebar-accordion-text fw-500 py-2 px-2 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-case-sidebar-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
                   Key dates
                 </button>
               </h2>
