--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,13 @@
         </div>
     	</div>
 
-			{% include banner-alert.html %}
+			<!-- {% include banner-alert.html %} -->
 
 			{% include header.html %}
 
 			{{ content }}
+
+			{% include footer.html %}
 
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 			<script src="https://kit.fontawesome.com/ac849a8797.js" crossorigin="anonymous"></script>
