--- a/css/cobalt-add.css
+++ b/css/cobalt-add.css
@@ -408,6 +408,19 @@ ul.timeline {
   border-radius: 5px;
 }
 
+footer {
+  border-top: 1px solid #0a1f8f1a !important;
+}
+
+.footer-links ul {
+  margin-bottom: 0;
+}
+
+.footer-links ul li {
+  display: inline-block;
+  padding: 1em;
+}
+
 /* = Colour swatches
 -------------------------------------------------------------------------- */
 
