new user attribute and remove case note

--- a/css/cobalt-add.css
+++ b/css/cobalt-add.css
@@ -421,6 +421,10 @@ footer {
   padding: 1em;
 }
 
+li i:hover {
+  color: #081972 !important;
+}
+
 /* = Colour swatches
 -------------------------------------------------------------------------- */
 
