--- a/css/cobalt-main.css
+++ b/css/cobalt-main.css
@@ -320,16 +320,17 @@ sup {
 }
 
 a {
-  color: #0a1f8f;
+  color: var(--primary-500);
   text-decoration: underline;
+  cursor: pointer;
 }
 a:hover {
   color: #081972;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
-  color: inherit;
-  text-decoration: none;
+  color: var(--primary-500);
+  text-decoration: underline;
 }
 
 pre,
