--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer class="footer-links text-end">
   <ul class="pe-5">
     <li><a href="/accessibility">Accessibility</a></li>
+    <li><a href="/cookies">Cookies</a></li>
     <li><a href="/help">Help</a></li>
     <li><a href="/privacy">Privacy</a></li>
   </ul>
