Add links to login page

--- a/css/cobalt-add.css
+++ b/css/cobalt-add.css
@@ -425,6 +425,10 @@ li i:hover {
   color: #081972 !important;
 }
 
+.login-list {
+  list-style-type: none;
+}
+
 /* = Colour swatches
 -------------------------------------------------------------------------- */
 
