--- a/_includes/sidenav-case-alt.html
+++ b/_includes/sidenav-case-alt.html
@@ -120,25 +120,26 @@
             </div>
             <div class="accordion-item border-0 bg-white">
               <h2 class="accordion-header" id="accordion-case-sidebar-headingFour">
-                <button class="accordion-button bg-secondary-100 idx-sidebar-accordion-text fw-500 collapsed py-2 px-2" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-case-sidebar-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
+                <button class="accordion-button bg-secondary-100 idx-sidebar-accordion-text fw-500 py-2 px-2" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-case-sidebar-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
                   Notes
                 </button>
               </h2>
-              <div id="accordion-case-sidebar-collapseFour" class="accordion-collapse collapse" aria-labelledby="accordion-case-sidebar-headingFour">
+              <div id="accordion-case-sidebar-collapseFour" class="accordion-collapse collapse show" aria-labelledby="accordion-case-sidebar-headingFour">
                 <div class="accordion-body idx-sidebar-accordion-text d-flex flex-column px-2">
                   <a href="#"><i class="fal fa-pencil-alt fa-fw me-1 mb-2"></i>Add note</a>
                   <a href="/case-view/timeline"><i class="fal fa-history fa-fw me-1 mb-2"></i>Timeline</a>
+                  <a href="/summary"><i class="fal fa-arrow-right fa-fw me-1 mb-2"></i>Case summary</a>
                   <a href="#"><i class="fal fa-ban fa-fw me-1 mb-2"></i>Close case </a>
                 </div>
               </div>
             </div>
             <div class="accordion-item border-0 bg-white">
               <h2 class="accordion-header" id="accordion-case-sidebar-headingFive">
-                <button class="accordion-button bg-secondary-100 idx-sidebar-accordion-text fw-500 py-2 px-2 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-case-sidebar-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
+                <button class="accordion-button bg-secondary-100 idx-sidebar-accordion-text fw-500 py-2 px-2" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-case-sidebar-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
                   Key dates
                 </button>
               </h2>
-              <div id="accordion-case-sidebar-collapseFive" class="accordion-collapse collapse" aria-labelledby="accordion-case-sidebar-headingFive">
+              <div id="accordion-case-sidebar-collapseFive" class="accordion-collapse collapse show" aria-labelledby="accordion-case-sidebar-headingFive">
                 <div class="accordion-body idx-sidebar-accordion-text px-2">
                   <div class="d-flex justify-content-between">
                     <p class="idx-sidebar-accordion-text text-neutral-500 mb-1" title="Date of birth">Request date</p>
