--- a/css/cobalt-add.css
+++ b/css/cobalt-add.css
@@ -36,7 +36,7 @@ nav a {
 }
 
 .navbar-brand {
-  /*font-family: var(--font-serif);*/
+  font-family: var(--font-serif);
 }
 
 .idx-nav-icon {
@@ -184,11 +184,11 @@ table { margin-top: 1.5rem}
 }
 
 .idx-message-headline {
-  /*font-family: var(--font-serif);*/
+  font-family: var(--font-serif);
   font-size: 56px;
   line-height: 3.5rem;
   color: var(--white);
-  font-weight: 700;
+  font-weight: 400;
 }
 
 .idx-message-body {
@@ -219,11 +219,11 @@ table { margin-top: 1.5rem}
 }
 
 h2.idx-login-name {
-    /*font-family: var(--font-serif);*/
+    font-family: var(--font-serif);
     font-size: 2.25rem;
     color: var(--primary-500);
     margin-bottom: 0;
-    font-weight: 700;
+    font-weight: 400;
 }
 
 h3.idx-login-descriptor {
