New login page background

--- a/css/cobalt-add.css
+++ b/css/cobalt-add.css
@@ -202,9 +202,9 @@ table { margin-top: 1.5rem}
 
 .idx-login-img {
   height: 100vh;
-  background-image: url(/assets/images/bg.jpg);
+  background-image: url(/assets/images/bg-2.jpg);
   background-size: cover;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.2);
   background-blend-mode: color;
 }
 
