--- a/css/cobalt-main.css
+++ b/css/cobalt-main.css
@@ -162,6 +162,9 @@ $h6-font-size:              $font-size-base;*/
   --body-line-height: 1.5;
   --body-color: #282828;
   --body-bg: /*#fcfcfd;*/ #f8f9fa;
+  --callout-color-info: #055160;
+  --callout-bg-info: #cff4fc;
+  --callout-border-info: #9eeaf9;
 }
 
 *,
@@ -2622,7 +2625,7 @@ textarea.form-control-lg {
   width: 100%;
   padding: 0.375rem 2.25rem 0.375rem 0.75rem;
   -moz-padding-start: calc(0.75rem - 3px);
-  font-size: 0.875rem;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #282828;
