--- a/_includes/header-anon.html
+++ b/_includes/header-anon.html
@@ -2,7 +2,7 @@
   <nav class="py-2 navbar top bg-primary main-header">
     <div class="container-fluid">
 
-      <a href="/" class="navbar-brand text-white ms-4 pt-2 "><span class="d-none d-md-inline-block">Idox EHC Hub<span class="px-3">|</span></span><span class="la-name">Edgehill Council (Prototype)</span></a>
+      <a href="/" class="navbar-brand text-white ms-4 pt-2 "><span class="d-none d-md-inline-block">EHC Hub<span class="px-3">|</span></span><span class="la-name">Edgehill Council (Prototype)</span></a>
 
     </div>
   </nav>
