Updated assessment, work tray and new timeline page

--- a/_includes/actions-assessment-alternate.html
+++ b/_includes/actions-assessment-alternate.html
@@ -1,8 +1,8 @@
 <div class="row sticky-top bg-body py-3 my-2">
   <div class="d-flex justify-content-between">
-    <a class="btn btn-neutral-50 me-2" href="#"><i class="fal fa-arrow-circle-left"></i><span class="d-none d-md-inline-block ms-2">View decision</span></a>
+    <a class="btn btn-neutral-50 me-2" href="#"><i class="fal fa-arrow-circle-left me-2"></i>Previous<span class="d-none d-md-inline-block ms-1">:: Decision</span></a>
     <div class="d-flex">
-      <a class="btn btn-neutral-50 disabled" href="#"><i class="fal fa-arrow-circle-right"></i><span class="d-none d-md-inline-block ms-2">Progress to decision<span></a>
+      <a class="btn btn-neutral-50 disabled" href="#"><i class="fal fa-arrow-circle-right me-2"></i>Next<span class="d-none d-md-inline-block ms-1">:: Decision<span></a>
       <div class="dropdown ps-2">
         <a class="btn btn-neutral-50" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           <i class="fal fa-ellipsis-v-alt px-1"></i>
