--- a/_includes/case-details.html
+++ b/_includes/case-details.html
@@ -36,10 +36,13 @@
         <i class="fal fa-ellipsis-v-alt px-1"></i>
       </a>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Person details</a></li>
+        <li><h6 class="dropdown-header">Child/young person</h6></li>
+        <li><a class="dropdown-item" href="#">Details</a></li>
         <li><a class="dropdown-item" href="#">Change picture</a></li>
-        <li><a class="dropdown-item" href="#">Case access</a></li>
-        <li><a class="dropdown-item" href="#">Case timeline</a></li>
+        <li><hr class="dropdown-divider"></li>
+        <li><h6 class="dropdown-header">Case</h6></li>
+        <li><a class="dropdown-item" href="#">Access</a></li>
+        <li><a class="dropdown-item" href="/case-view/timeline-alternate">Timeline</a></li>
         <li><a class="dropdown-item" href="#">Close case</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><h6 class="dropdown-header">Other cases</h6></li>
