--- a/_includes/search-cases.html
+++ b/_includes/search-cases.html
@@ -1,15 +1,19 @@
-<form class="row mt-7 mb-7">
-  <div class="col-lg-6 d-flex">
-    <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search by name or case ID" aria-label="search" aria-describedby="button-addon2">
-      <button class="btn btn-primary" type="button" id="button-addon2"><i class="fal fa-search me-2 text-white" aria-hidden="true" title="Search"></i>Search</button>
+<form class="mt-7 mb-7">
+  <div class="row">
+    <div class="col d-flex">
+      <div class="flex-grow-1">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search by name or case ID" aria-label="search" aria-describedby="button-addon2">
+          <button class="btn btn-primary" type="button" id="button-addon2"><i class="fal fa-search text-white" aria-hidden="true" title="Search"></i><span class="d-none d-md-inline-block ms-2">Search</span></button>
+        </div>
+      </div>
+      <div class="d-flex justify-content-end">
+        <a class="btn btn-neutral-50 no-wrap ms-2" href="#" data-bs-toggle="collapse" data-bs-target="#search-filters"><i class="fal fa-filter"></i><span class="d-none d-md-inline-block ms-2">Filters</span></a>
+        <a class="btn btn-neutral-50 no-wrap ms-2" href="#"><i class="fal fa-undo"></i><span class="d-none d-md-inline-block ms-2">Clear</span></a>
+      </div>
     </div>
   </div>
-  <div class="col-lg-4 mt-2 mt-lg-0">
-    <a class="btn btn-neutral-50 no-wrap" href="#" data-bs-toggle="collapse" data-bs-target="#search-filters"><i class="fal fa-filter me-2"></i>Filters</a>
-    <a class="btn btn-neutral-50 no-wrap ms-2" href="#"><i class="fal fa-undo me-2"></i>Clear</a>
-  </div>
-  <div class="collapse p-3" id="search-filters">
+  <div class="collapse py-3" id="search-filters">
     {% include filter-cases.html %}
   </div>
 </form>
