--- a/_includes/case-details.html
+++ b/_includes/case-details.html
@@ -16,12 +16,14 @@
       <p>EHC/21/0123</p>
     </div>
     <div class="col">
-      <span class="text-muted"><small>Setting</small></span>
-      <p>Greenhill School (Year 13)</p>
+      <span class="text-muted"><small>Co-ordinator</small></span>
+      <p>Mehul Sandal</p>
       <span class="text-muted"><small>Status</small></span>
       <p>Assessment in progress</p>
     </div>
     <div class="col">
+      <span class="text-muted"><small>Setting</small></span>
+      <p>Greenhill School (Year 13)</p>
       <span class="text-muted"><small>Tags</small></span>
       <p><span class="badge rounded-pill bg-error-600 me-1" data-bs-toggle="tooltip" data-bs-title="Safeguarding concern">SG</span><span class="badge rounded-pill bg-success-700" data-bs-toggle="tooltip" data-bs-title="Looked After Child">LAC</span></p>
     </div>
@@ -61,14 +63,16 @@
       <p>EHC/21/0123</p>
     </div>
     <div class="col">
-      <span class="text-muted"><small>Setting</small></span>
-      <p>Greenhill School (Year 13)</p>
+      <span class="text-muted"><small>Co-ordinator</small></span>
+      <p>Mehul Sandal</p>
       <span class="text-muted"><small>Status</small></span>
       <p>Assessment in progress</p>
     </div>
   </div>
   <div class="row">
     <div class="col">
+      <span class="text-muted"><small>Setting</small></span>
+      <p>Greenhill School (Year 13)</p>
       <span class="text-muted"><small>Tags</small></span>
       <p><span class="badge rounded-pill bg-error-600 me-1" data-bs-toggle="tooltip" data-bs-title="Safeguarding concern">SG</span><span class="badge rounded-pill bg-success-700" data-bs-toggle="tooltip" data-bs-title="Looked After Child">LAC</span></p>
     </div>
