--- a/css/cobalt-add.css
+++ b/css/cobalt-add.css
@@ -354,7 +354,7 @@ h3.idx-login-descriptor {
 }
 
 .timeline-header {
-  background-color: var(--error-50);
+  background-color: var(--secondary-5);
 }
 
 /*
