--- a/_includes/product-info.html
+++ b/_includes/product-info.html
@@ -1,4 +1,4 @@
 <div class="mt-8 text-muted">
   <p class="mb-0">The EHC Hub is provided by <a href="https://www.idoxgroup.com/" target="_blank">Idox plc</a></p>
-  <p>Version 9.0.0</p>
+  <p>Version x.x.x</p>
 </div>
