--- a/_includes/actions-timeline.html
+++ b/_includes/actions-timeline.html
@@ -1,5 +1,7 @@
 <div class="row sticky-top bg-body py-3 my-2">
   <div class="d-flex justify-content-end">
-    <a class="btn btn-neutral-50" href="#"><i class="fal fa-plus-circle"></i><span class="ms-2">Add note<span></a>
+    <a class="btn btn-neutral-50 ms-2" href="#"><i class="fal fa-search"></i></a>
+    <a class="btn btn-neutral-50 ms-2" href="#"><i class="fal fa-filter"></i></a>
+    <a class="btn btn-neutral-50 ms-2" href="#"><i class="fal fa-plus-circle"></i><span class="ms-2">Add note<span></a>
   </div>
 </div>
