--- a/_includes/case-details.html
+++ b/_includes/case-details.html
@@ -19,7 +19,7 @@
       <span class="text-muted"><small>Co-ordinator</small></span>
       <p>Mehul Sandal</p>
       <span class="text-muted"><small>Status</small></span>
-      <p>Assessment in progress</p>
+      <p>Assessment</p>
     </div>
     <div class="col">
       <span class="text-muted"><small>Setting</small></span>
@@ -66,7 +66,7 @@
       <span class="text-muted"><small>Co-ordinator</small></span>
       <p>Mehul Sandal</p>
       <span class="text-muted"><small>Status</small></span>
-      <p>Assessment in progress</p>
+      <p>Assessment</p>
     </div>
   </div>
   <div class="row">
